--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
+    "connected-react-router": "^6.9.3",
     "framer-motion": "^6.5.1",
+    "history": "^4.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^8.0.4",
-    "react-router-dom": "^6.4.1",
+    "react-redux": "^7.2.6",
+    "react-router": "^6.4.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "semantic-ui-css": "^2.4.1",
