--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chese",
   "version": "0.1.0",
-  "homepage": "http://chese.ca/",
+  "homepage": "http://chese.ca",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -19,7 +19,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-router": "^6.4.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
