--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chese",
   "version": "0.1.0",
-  "homepage": "https://chese.ca",
+  "homepage": "https://chese.ca/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.4",
